todas as bases preparadas

--- a/src/views/pages/home.mustache
+++ b/src/views/pages/home.mustache
@@ -1,25 +1,6 @@
-<!DOCTYPE html>
-<html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <title>Document</title>
-</head>
+{{>partials/header}}
 
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="register.html">Cadastro</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="patients.html">Login</a></li>
-                <li><a href="profile.html">perfil</a></li>
-            </ul>
-        </nav>
-    </header>
     <main>
         <section id="areaUsuarios">
             <!-- Dados dos usuários -->
@@ -40,10 +21,4 @@
 
         </section>
     </main>
-
-    <footer>
-        <p>&copy; 2023 Site com aspectos hierárquicos</p>
-    </footer>
-</body>
-
-</html>
+{{>partials/footer}}
