--- a/public/css/style.css
+++ b/public/css/style.css
@@ -152,8 +152,47 @@ button[type="submit"]:hover {
 
 /* Estilos do rodapé */
 footer {
-    background-color: #f9f9f9;
-    padding: 10px;
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+}
+
+.footer-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.footer-section {
+    flex: 1 1 300px;
+    margin-bottom: 20px;
+}
+
+.footer-section h2 {
+    margin-top: 0;
+}
+
+.footer-section p {
+    margin-bottom: 10px;
+}
+
+.social-icons {
+    list-style: none;
+    padding: 0;
+    display: flex;
+}
+
+.social-icons li {
+    margin-right: 10px;
+}
+
+.social-icons a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.footer-bottom {
+    margin-top: 20px;
     text-align: center;
     font-size: 12px;
     color: #777;
