--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <title>Centro de atendimentos</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <title>HospitalDev</title>
 </head>
+
 <body>
-    <header>
-        <nav>
+    <header class="header">
+        <nav class="header__nav">
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/register">Cadastro</a></li>
-                <li><a href="/login">Login</a></li>
-                <li><a href="patients">Login</a></li>
-                <li><a href="/profile">perfil</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="register.html">Cadastro</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="patients.html">Pacientes</a></li>
+                <!-- nesta parte sera add func so de atendente -->
+                <li><a href="/agendamentos">Agendamentos</a></li>
             </ul>
         </nav>
+        <h2 class="header__logo">hospitalDev</h2>
     </header>
