--- a/src/views/pages/home.mustache
+++ b/src/views/pages/home.mustache
@@ -1,24 +1,23 @@
-
 {{>partials/header}}
 
-    <main>
-        <section id="areaUsuarios">
-            <!-- Dados dos usuários -->
+<main class="main">
+    <h2 class="main__title">Pacientes no registro</h2>
+    <!-- Dados dos usuários -->
+    <section class="user-area">
+        {{#patients}}
+        <div class="user-card">
+            <h3 class="user-card__name">Nome Completo<br>{{ name }}</h3>
+            <p class="user-card__info">Data de Nascimento: {{ dateBirth }}</p>
+            <p class="user-card__info">Número do SUS: {{ numSus }}</p>
+            <p class="user-card__info">Histórico de Doença: Não obtido</p>
+        </div>
 
-            <div class="userCard">
-                <h3>Nome Completo</h3>
-                <p>Idade: XX</p>
-                <p>Altura: XX cm</p>
-                <p>Peso: XX kg</p>
-                <p>Histórico de Doença: XXXX</p>
-            </div>
+        <div class="user-card">
+            <!-- Dados do segundo usuário -->
+        </div>
+        {{/patients}}
+        <!-- Repita as divs para cada usuário -->
+    </section>
+</main>
 
-            <div class="userCard">
-                <!-- Dados do segundo usuário -->
-            </div>
-
-            <!-- Repita as divs para cada usuário -->
-
-        </section>
-    </main>
 {{>partials/footer}}
