--- a/src/views/partials/footer.mustache
+++ b/src/views/partials/footer.mustache
@@ -1,29 +1,30 @@
-<footer>
-  <div class="footer-content">
-    <div class="footer-section about">
-      <h2>Sobre</h2>
-      <p>Descrição do seu site ou empresa.</p>
-    </div>
+   <footer class="footer">
+        <ul class="social-icons">
+            <li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+        </ul>
+        <div class="footer__bottom">
+            <div class="footer__bottom-column">
+                <h3 class="footer__bottom-heading">Sobre Nós</h3>
+                <p class="footer__bottom-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu justo
+                    quis
+                    nisi tempus ultrices vel non turpis.</p>
+            </div>
+            <div class="footer__bottom-column">
+                <h3 class="footer__bottom-heading">Contato</h3>
+                <p class="footer__bottom-text">Telefone: (123) 456-7890</p>
+                <p class="footer__bottom-text">Email: contato@hospitaldev.com</p>
+            </div>
+            <div class="footer__bottom-column">
+                <h3 class="footer__bottom-heading">Endereço</h3>
+                <p class="footer__bottom-text">123 Rua Principal</p>
+                <p class="footer__bottom-text">Cidade, Estado</p>
+            </div>
+        </div>
+    </footer>
 
-    <div class="footer-section contact">
-      <h2>Contato</h2>
-      <p>Email: exemplo@exemplo.com</p>
-      <p>Telefone: (XX) XXXX-XXXX</p>
-    </div>
 
-    <div class="footer-section social">
-      <h2>Redes Sociais</h2>
-      <ul class="social-icons">
-        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="footer-bottom">
-    &copy; 2023 Nome da sua empresa. Todos os direitos reservados.
-  </div>
-</footer>
 </body>
+
 </html>
