base das api completa

--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -13,10 +13,10 @@
     <header class="header">
         <nav class="header__nav">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="register.html">Cadastro</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="patients.html">Pacientes</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/register">Cadastro</a></li>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/patient">Pacientes</a></li>
                 <!-- nesta parte sera add func so de atendente -->
                 <li><a href="/agendamentos">Agendamentos</a></li>
             </ul>
