--- a/src/views/pages/home.mustache
+++ b/src/views/pages/home.mustache
@@ -3,21 +3,17 @@
 <main class="main">
     <h2 class="main__title">Pacientes no registro</h2>
     <!-- Dados dos usuários -->
-    <section class="user-area">
-        {{#patients}}
-        <div class="user-card">
-            <h3 class="user-card__name">Nome Completo<br>{{ name }}</h3>
-            <p class="user-card__info">Data de Nascimento: {{ dateBirth }}</p>
-            <p class="user-card__info">Número do SUS: {{ numSus }}</p>
-            <p class="user-card__info">Histórico de Doença: Não obtido</p>
-        </div>
 
-        <div class="user-card">
-            <!-- Dados do segundo usuário -->
-        </div>
-        {{/patients}}
-        <!-- Repita as divs para cada usuário -->
+{{#allPatients}}
+    <div class="user-card">
+        <h3 class="user-card__name">Nome Completo: {{infos.name}}</h3>
+        <p class="user-card__info">Data de Nascimento: {{infos.dateBirth}}</p>
+        <p class="user-card__info">Número do SUS: {{infos.numSus}}</p>
+    </div>
+{{/allPatients}}
+
+
     </section>
-</main>
 
+</main>
 {{>partials/footer}}
