Criaçao de JWT com passport  e privando rotas

--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -14,7 +14,7 @@
         <nav class="header__nav">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/register">Cadastro</a></li>
+                <li><a href="/registerPat">Cadastro</a></li>
                 <li><a href="/login">Login</a></li>
                 <li><a href="/patient">Pacientes</a></li>
                 <!-- nesta parte sera add func so de atendente -->
