--- a/src/views/pages/registerPat.mustache
+++ b/src/views/pages/registerPat.mustache
@@ -2,7 +2,7 @@
 
  <main>
         <section id="cadastro">
-            <h2>Cadastro</h2>
+            <h2>Cadastro de Atendente</h2>
             <form>
                 <!-- Campos do formulário de cadastro -->
                 <label for="nome">Nome:</label>
